[FIX] MN-388: Couleur des lettres dans les proportions, Alignement des bulles dans la saisie Note, prise en compte des couleurs paramétrées sur l'échelle du suivi élève,Taille du texte paramétrés.

--- a/src/main/resources/public/sass/global/specifics/_competences.scss
+++ b/src/main/resources/public/sass/global/specifics/_competences.scss
@@ -81,6 +81,7 @@ z-index: 1;
   .lettreNiv {
     position: relative;
     vertical-align: initial;
+    font-size: 10.5px;
   }
   &.evaluations {
     .datepicker{
@@ -2178,5 +2179,8 @@ z-index: 1;
   i.cross-annotation{
     padding-left: 5px;
     line-height: 34px;
+  }
+  span.competence-eval.rounded.ng-scope {
+    vertical-align: middle;
   }
 }
